CAMEL-14020 - Fix compilation error in camel-beanstalk